syntax = "proto3";

package pb;

import "user.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/mikeheft/go-backend/pb";

message LoginUserRequest {
  string username = 1;
  string password = 4;
}

message LoginUserResponse {
  User user = 1;
}


