syntax = "proto3";

package pb;

import "create_user.proto";
import "login_user.proto";
import "google/api/annotations.proto";

option go_package = "github.com/mikeheft/go-backend/pb";

service SimpleBank {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
        post: "/users/create"
        body: "*"
      };
  }
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/users/login"
      body: "*"
    };
  }
}